# PathfinderGame

./: CMakeLists.txt  main.cpp  readme.md
game/: game.cpp  game.h  gameWindow.cpp  gameWindow.h
include/: coin.h  enemy.h  gameManager.h  levelConfig.h  map.h  movementStrategy.h  pathfinder.h  pathfindingSystem.h  player.h  score.h  tile.h
include/movement/: randomMovement.h  wavefrontChase.h
include/pathfinding/: astarPathfinder.h  bfsPathfinder.h  dijkstraPathfinder.h
maps/: level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  level_medium.txt
source/: coin.cpp  enemy.cpp  gameManager.cpp  main.cpp  map.cpp  pathfinder.cpp  pathingSystem.cpp  player.cpp  score.cpp  tile.cpp
source/movement/: randomMovement.cpp  wavefrontChase.cpp
source/pathfinding/: astarPathfinder.cpp  bfsPathfinder.cpp  dijkstraPathfinder.cpp
